Harden cross-platform configurator releases